--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,119 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+*,
+::after,
+::before {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+h1 {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+input {
+  padding: 2px;
+}
+
+button {
+  margin: 6px;
+  padding: 6px;
+}
+.row {
+  display: flex;
+}
+.row > * {
+  flex: 1 1 auto;
+}
+
+.item-list {
+  flex-basis: 1;
+  border: 1px solid;
+  padding: 1rem;
+
+  display: flex;
+  flex-wrap: wrap;
+  place-self: baseline;
+}
+.item-list h4 {
+  width: 100%;
+}
+.basket-list {
+  border: 1px solid;
+  padding: 1rem 4px;
+  overflow-y: scroll;
+}
+
+.item {
+  border: 1px solid gray;
+  margin: 0.5rem;
+  padding: 4px;
+}
+
+.calc-btn {
+  max-width: 120px;
+  padding: 12px;
+  float: right;
+  font-weight: 800;
+  font-family: ubuntu;
+  background-color: #0d6efd;
+  color: white;
+
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.calc-btn:disabled {
+  background-color: gainsboro;
+  color: #000;
+  cursor: not-allowed;
+}
+
+.receipt {
+  background-color: #f5f5f5;
+  padding: 1rem;
+  max-width: 420px;
+  margin: 0px 0px 1rem 1rem;
+}
+
+.row-space-b {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.d-btn {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  cursor: pointer;
 }
